# klaudio-panels

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SECURITY.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
PRPs/: 001--poc-claude-code-sessions.md  002--poc-claude-pty.md  003--multi-tab-and-session-persist.md  004--file-tree-and-jsonl-watcher.md  005--git-and-diff-viewer.md  006--open-in-editor-and-file-preview.md  007--pty-embedded-terminal-editor.md  008--shell-terminal-bottom-panel.md  009--file-tree-polish-and-watcher-fix.md  010--resizable-sidebar.md  011--proportional-panel-resize.md  012--inline-file-editor.md  012--osc777-cli-agent-events.md  013--in-app-toast-notifications.md  014--notification-bell-and-hover-pause.md  015--inline-file-editor.md  015--notification-preferences.md  016--terminal-activation-resize.md  017--fix-focus-steal-on-project-switch.md  018--tab-needs-attention-indicator.md  019--inline-file-editor.md
PRPs/templates/: prp_base.md
docs/: release-flow.md  sprint-00-results.md  sprint-00-stream-json-exploration.md  sprint-01-claude-in-pty.md  sprint-01-poc.md  sprint-01-results.md  sprint-02-multi-tab.md  sprint-02-results.md  sprint-03-file-tree-and-watcher.md  sprint-04-git-and-diff-viewer.md  sprint-05-open-in-and-preview.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: klaudio
src-tauri/src/: binary.rs  claude.rs  cli_agent.rs  cli_args.rs  debug_log.rs  file_read.rs  file_write.rs  fs.rs  git.rs  lib.rs  main.rs  notify.rs  open_in.rs  plugins.rs  pty.rs  session_watcher.rs  sessions.rs  shell_env.rs  shell_install.rs
src/components/: app-icon.tsx  chat-view.tsx  command-palette.tsx  confirm-dialog.tsx  context-menu.tsx  (+18 more)
(+54 files in other folders)
