[package]
name = "cc-ui"
version = "0.0.1"
description = "Claude Code UI — native window embedding the Claude Code CLI"
authors = ["willywg"]
edition = "2021"

[lib]
name = "cc_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "7"
dirs = "6"
anyhow = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.9.0"
base64 = "0.22.1"
uuid = { version = "1.23.1", features = ["v4"] }
