[package]
name = "cc-ui"
version = "0.9.0"
description = "Claude Code UI — native window embedding the Claude Code CLI"
authors = ["willywg"]
edition = "2021"

[lib]
name = "cc_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "7"
dirs = "6"
anyhow = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.9.0"
base64 = "0.22.1"
notify = "8"
notify-debouncer-full = "0.6"
ignore = "0.4"
lru = "0.14"
git2 = { version = "0.20", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSDictionary"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSImage", "NSBitmapImageRep"] }
